src/App.scss
@import './styles/mixins.scss';

.App {
  --targetselector-display: unset;
  --header-display: unset;
  --main-display: unset;
  background: var(--bg-color-1);
  min-height: 100vh;
  display: grid;
  gap: 3em;
  grid-template: var(--grid-template);
  grid-template-columns: 1fr;
  max-width: 100vw;

  .TargetSelector {
    grid-area: target-selector;
    @include padding-y(2em);
    display: var(--targetselector-display);
    padding-bottom: 3em;
  }
  .Sidebar {
    @include padding-y(0.875em);
    @include padding-x(0.25em);
    grid-area: sidebar;
  }

  .Header {
    grid-area: header;

    display: var(--header-display);
  }

  .Main {
    @include padding-y(2em);
    @include padding-x(0.4em);
    grid-area: main;
    max-width: 100vw;

    display: var(--main-display);
  }
}

@media only screen and (min-width: 700px) {
  .App {
    --targetselector-display: unset;
    --sidebar-display: unset;
    --header-display: unset;
    --main-display: unset;
    grid-template: 'sidebar target-selector main';
    padding-right: 1em;
    grid-template-columns: minmax(4em, 0.5fr) 2fr minmax(min-content, 6fr);

    .TargetSelector {
      padding-bottom: unset;
    }

    .Main {
      @include padding-x(0em);
      max-width: 70vw;
    }
  }
}

